--- a/weather app/index.html
+++ b/weather app/index.html
@@ -40,7 +40,7 @@
     </div>
 
 <script>
-    const apiKey ="c72b3174d319c5e8cd53cf28f575e48f";
+    const apiKey ="[your APIkey]";
     const apiUrl ="https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
     const searchBox = document.querySelector(".search input");
